# me

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  TODO  TODO.md  dev.py  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: docker-publish.yml
content/blog/: 2024.md  awesome-powermenu.md  defending-nixos.md  development.md  how-to-not-make-quiz.md  neovim-colorscheme-caching.md  nixos.md  ricing.md  skill.md  the-astro-experience.md
content/blog/devlogs/: fabric.md  map.md  mascots.md  planet.md  rewrite.md  shaders.md  the-astro-experience.md
content/blog/misc/: rewrite.md
content/blogs/: 2024.md  awesome-bar.md  awesome-powermenu.md  how-to-not-make-quiz.md  neovim-colorscheme-caching.md  nixos.md  ricing.md  skill.md  the-astro-experience.md  tryhard-to-enjoyer.md
content/journal/: 010425.md
content/notes/: index.md  shaders.md  zig-learnings.md
content/poems/: bonsai.md  clockmaker.md  faith.md  happiness.md  paper.md  rain.md  rose.md  standup.md  stride.md  the-aftermath.md  the-final-stage.md  the-road-taken.md  time-changes.md  train.md  vase.md  waltz-of-the-candle.md
src/: cache.rs  file_tree.rs  handlers.rs  image_generator.rs  kino.rs  main.rs  markdown.rs  middle.rs  projects.rs  rss.rs  search.rs  state.rs  templates.rs  tweet.rs
static/: explorer.js  gol.js  input.css  projects.js  search.js  style.css
templates/: 404.html  about.html  base.html  file_node.html  index.html  list.html  projects.html  resume.html  search.html  view.html
(+12 files in other folders)
