[package]
name = "personal"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = "0.4.40"
env_logger = "0.11.6"
htmlescape = "0.3.1"
image = "0.25.5"
imageproc = "0.25.0"
inkjet = "0.11.1"
lazy_static = "1.5.0"
once_cell = "1.20.3"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
reqwest = "0.12.12"
rss = "2.0.12"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
syntect = "5.2.0"
tera = "1.20.0"
tokio = "1.43.0"
